# loopdetect

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  README.md  environment-test.yml  environment.yml  pyproject.toml  setup.py  to do
.github/workflows/: tests.yml
LoopDetect/: LoopDetect.py  __init__.py  core.py  examples.py  func_POSm4.py  func_li08.py
docs/online_docs/: genindex.html  index.html  workflow.html
docs/source/: conf.py  index.rst
public/: genindex.html  objects.inv  py-modindex.html  search.html
public/_sources/: index.rst.txt  workflow.rst.txt
public/html/: searchindex.js
src/loopdetect/: __init__.py  core.py
tests/: test_core.py  test_core_old_user.py  test_imports.py  test_package_data.py
